# thesis

./: #outline#  .gitignore  75malapertlog  data_50_daste.csv  email  email~  flippant_summary.tex~  garamond.sty~  malapert_comp2.ods  paper.aux  paper.tex  paper.toc  presentation.odp  proposal.tex~  todo
analyzer/: .stats.py.swp  .~lock.statistics.ods#  data_10  grapher.py  statistics.ods  stats.py  stats2.ods  totallength.py
article/: article.aux  article.bbl  article.blg  article.tex  bibliography.bib
bender/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
bender/src/: .BBNode.h.swp  .main.cpp.swp  BBNode.cpp  BBNode.h  CMakeLists.txt  Job.h  Makefile  RootNode.cpp  RootNode.h  cmake_install.cmake  main.cpp  mip_root_run.cpp
code/: README
cp/: CMakeCache.txt  CMakeCache.txt~  CMakeLists.txt  Makefile  cmake_install.cmake
cp/src/: .main.cpp.swp  CMakeLists.txt  CMakeLists.txt~  Makefile  MaxProcessingTimeI.h  MinNonzeroDuedateI.cpp  MinNonzeroDuedateI.h  cmake_install.cmake  main.cpp  main.cpp~  main_new.cpp
cpx_studio_12.3/: README.html
daste/: convert.py
data/: data_10  data_10_1  data_10_10  data_10_11  data_10_12  data_10_13  data_10_14  data_10_15  data_10_16  data_10_17  data_10_18  data_10_19  data_10_2  data_10_20  data_10_21  data_10_22  data_10_23  data_10_24  data_10_25  data_10_26  data_10_27  data_10_28  data_10_29  data_10_3  data_10_30  data_10_31  data_10_32  data_10_33  data_10_34  data_10_35  data_10_36  data_10_37  data_10_38  data_10_39  data_10_4  data_10_5  data_10_6  data_10_7  data_10_8  data_10_9  (+671 more)
data_noduedates/: data_10_1  data_10_10  data_10_11  data_10_12  data_10_13  data_10_14  data_10_15  data_10_16  (+696 more)
mip/src/: .main.cpp.swp  CMakeLists.txt  CMakeLists.txt~  Makefile  adsf  cmake_install.cmake  main.cpp  main.cpp~  main_current.cpp
nkbender1/src/: .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  Job.cpp  Job.h  Makefile  cmake_install.cmake  main.cpp  main.cpp~  main_copy  mip_bb_run.cpp  not-used
(+5290 files in other folders)
